--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ scikit-learn             # Machine learning models (GradientBoostingRegressor, L
 matplotlib               # Plotting and visualization
 seaborn                  # Statistical data visualization
 requests                 # Making HTTP requests (e.g., for APIs)
+flask-cors
